examples/conf/HTTPRoute_default_lb-rr-noretry.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lb-rr-noretry
  namespace: default
  annotations:
    edgion.io/max-retries: "0"
spec:
  parentRefs:
    - name: example-gateway
      namespace: edge
  hostnames:
    - "lb-rr-test.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /test
      backendRefs:
        - name: lb-rr-test-service
